--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,22 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  padding: 8px;
+  display: flex;
+  justify-content: space-between;
+  align-items:center;
+}
+
+.left-align {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: left;
+}
+
+.right-align {
+  display: flex;
+  flex-wrap: wrap-reverse;
+  justify-content: right;
 }
 
 .profile-image {
@@ -20,6 +36,7 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  margin-left: 8px;
 }
 
 .logo {
@@ -27,6 +44,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  padding-right: 8px;
 }
 
 button {
@@ -35,14 +53,21 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  margin-right: 8px;
 }
 
 a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
+  padding-left: 8px;
+  padding-right: 8px;
 }
 
 ul {
   list-style-type: none;
+  display: flex;
+  padding-left: 0px;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
